--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "caniuse-lite": "^1.0.30000792",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.0",
+    "gulp-clean-css": "^3.9.2",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^4.1.0",
+    "gulp-less": "^3.4.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
-    "gulp-uglify": "^3.0.0"
+    "gulp-stylus": "^2.7.0",
+    "gulp-uglify": "^3.0.0",
+    "merge-stream": "^1.0.1",
+    "postcss-cssnext": "^3.0.2"
   }
 }
