--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "devDependencies": {
     "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
     "caniuse-lite": "^1.0.30000792",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^4.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-less": "^3.4.0",
     "gulp-postcss": "^7.0.1",
