--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.23.6",
     "caniuse-lite": "^1.0.30000792",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^4.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-less": "^3.4.0",
     "gulp-postcss": "^7.0.1",
@@ -19,6 +21,7 @@
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.0",
     "merge-stream": "^1.0.1",
-    "postcss-cssnext": "^3.0.2"
+    "postcss-cssnext": "^3.0.2",
+    "yargs": "^11.0.0"
   }
 }
